--- a/public/css.css
+++ b/public/css.css
@@ -49,7 +49,7 @@ button {
 	background-color: #009900;
 	border: none;
 	color: white;
-	padding: 4% 4%;
+	padding: 6%;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
