--- a/public/css.css
+++ b/public/css.css
@@ -1,13 +1,16 @@
 html {
-	height: 100%;
+	height: 100vh;
+	padding: 0;
+	margin: 0;
 }
 
 body {
 	background-image: url('back.png');
 	font-family: 'Arial';
 	overflow-y: scroll;
-	height: 100%;
-	padding: 2%;
+	height: 100vh;
+	padding: 0;
+	margin: 0;
 }
 
 .flex {
@@ -49,14 +52,14 @@ button {
 	background-color: #009900;
 	border: none;
 	color: white;
-	padding: 6%;
+	padding: 5%;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 4.5vw;
+	font-size: 6vw;
 	margin: 1%;
 	font-family: 'Impact';
-	width: 47%;
+	width: 45%;
 	outline: 0;
 }
 
@@ -67,7 +70,7 @@ button {
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 4.5vw;
+	font-size: 6vw;
 	font-family: 'Impact';
 	width: 75%;
 	outline: 0;
@@ -80,7 +83,7 @@ button {
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 4.5vw;
+	font-size: 5vw;
 	font-family: 'Impact';
 	width: 75%;
 	animation-name: but2a;
@@ -96,7 +99,7 @@ button {
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 4.5vw;
+	font-size: 5vw;
 	font-family: 'Impact';
 	width: 75%;
 	animation-name: but2b;
@@ -109,14 +112,14 @@ button {
 img {
 	height: 25%;
 	width: 85%;
-	margin: 0 auto 10% auto;
+	margin: 5% auto 5% auto;
 	display: block;
 }
 
 .comm {
 	width: 20%;
 	display: inline-block;
-	margin: 5% 4%;
+	margin: 2% 4%;
 }
 
 .niezbednik {
@@ -127,11 +130,11 @@ img {
 
 #tlo {
 	background-color: white;
-	width: 98%;
+	width: 90%;
 	animation-name: tlo;
 	animation-duration: 1s;
 	position: relative;
-	margin: auto;
+	margin: 1% auto;
 	border: none;
 	padding: 2% 2%;
 	font-size: 120%;
@@ -139,7 +142,7 @@ img {
 
 #tlo2 {
 	background-color: white;
-	width: 98%;
+	width: 90%;
 	animation-name: tlo2;
 	animation-duration: 1s;
 	position: relative;
@@ -150,7 +153,7 @@ img {
 }
 
 #fb {
-	width: 98%;
+	width: 100%;
 	animation-name: tlo;
 	animation-duration: 1s;
 	position: relative;
