--- a/public/css.css
+++ b/public/css.css
@@ -52,7 +52,7 @@ button {
 	background-color: #009900;
 	border: none;
 	color: white;
-	padding: 5%;
+	padding: 4%;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
@@ -74,6 +74,7 @@ button {
 	font-family: Tahoma;
 	width: 75%;
 	outline: 0;
+	padding: 3%;
 }
 
 .but2a {
@@ -112,14 +113,14 @@ button {
 img {
 	height: 25%;
 	width: 85%;
-	margin: 5% auto 2% auto;
+	margin: 3% auto 0%;
 	display: block;
 }
 
 .comm {
 	width: 20%;
 	display: inline-block;
-	margin: 2% 4%;
+	margin: 1% 4%;
 }
 
 .niezbednik {
