--- a/css.css
+++ b/css.css
@@ -43,7 +43,7 @@ div {
 }
 
 li {
-	color: #3d6e8e;
+	color: black;
 }
 
 ul {
@@ -241,7 +241,7 @@ img {
 }
 
 .title1 {
-	color: #ba742e;
+	color: #72ad46;
 }
 
 .textGreen {
